src/styles.css
@import 'modern-normalize';

body {
  padding: 1rem;
}

/* SET VALUES */
.carousel-container {
  position: relative;
  user-select: none;
  background-color: var(--carousel-bg);
}

.carousel-frame {
  overflow: hidden;
  height: inherit;
}

.carousel-wrapper {
  display: flex;
  gap: var(--gap, 0);
  height: inherit;
}

.carousel-wrapper img {
  width: 100%;
  object-fit: contain;
  opacity: 0.5;
  transition: opacity 0.5s ease-out;
}

.carousel-wrapper img.visible-img {
  opacity: 1;
  transition: opacity 0.5s ease-out 0.2s;
}

.carousel-buffer {
  width: 100%;
  flex-shrink: 0;
}

.arrow-l,
.arrow-r {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;

  background-color: var(--nav-color, white);
  fill: var(--arrow-color, black);
  height: var(--arrow-size, 32px);
  width: var(--arrow-size, 32px);
}

.arrow-l {
  left: 1rem;
}

.arrow-r {
  right: 1rem;
}

.arrow-l svg,
.arrow-r svg {
  height: inherit;
}

.dot-nav-wrapper {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
  padding: 0.5rem;

  position: absolute;
  bottom: 0;
  width: 100%;
}

.nav-dot {
  border-radius: 100%;
  cursor: pointer;

  background-color: var(--nav-color, white);
  transition: 0.2s;
}

.nav-dot:hover {
  transform: scale(1.3);
  transition: 0.2s;
}

.selected-dot {
  opacity: 1 !important;
}

.arrow-l,
.arrow-r,
.nav-dot {
  box-shadow: var(--shadow);
}

/* CUSTOMIZABLE VALUES */
:root {
  --carousel-bg: white;
  --gap: 0;
  --nav-color: white;
  --arrow-color: black;
  --arrow-size: 24px;
  --shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.carousel-container {
  width: 100%;
  max-width: 1024px;
  margin: 0 auto;
}

.arrow-l,
.arrow-r {
  opacity: 0.8;
  border-radius: 100%;
}

.nav-dot {
  height: 10px;
  width: 10px;
  opacity: 0.5;
}

